--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -11,3 +11,15 @@
   src: url("../fonts/a_FuturaRound.ttf") format("truetype"),
   local("Arial");
 }
+@font-face {
+  font-family: "a_FuturaRoundDemi";
+  font-display: block;
+  src: url("../fonts/ofont.ru_a_FuturaRoundDemi.ttf") format("truetype"),
+  local("Arial");
+}
+@font-face {
+  font-family: "Comic Sans MS";
+  font-display: block;
+  src: url("../fonts/comic-sans-ms/design.graffiti.comicsansms.ttf") format("truetype"),
+  local("Arial");
+}
