--- a/src/styles/sections/foother.scss
+++ b/src/styles/sections/foother.scss
@@ -15,27 +15,27 @@
     background-size: 100% 80%;
     background-repeat: no-repeat;
     background-position-y: 100%;
-    .heading-foother{
+    // .heading-foother{
 
 
-        h1 {
-            font-family: a_FuturaRoundDemi;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 48px;
-            line-height: 61px;
-            letter-spacing: 0.05em;
-            margin-top: -2%;
-            position: absolute;
-            z-index: 3;
-            margin-left: 40%;
-            // background-image: url(./../images/bg-heading.png);
-        }
-        .bg-heading {
-            margin-left: 39%;
-            position: relative;
-        }
-    }
+    //     h1 {
+    //         font-family: a_FuturaRoundDemi;
+    //         font-style: normal;
+    //         font-weight: bold;
+    //         font-size: 48px;
+    //         line-height: 61px;
+    //         letter-spacing: 0.05em;
+    //         margin-top: -2%;
+    //         position: absolute;
+    //         z-index: 3;
+    //         margin-left: 40%;
+    //         // background-image: url(./../images/bg-heading.png);
+    //     }
+    //     .bg-heading {
+    //         margin-left: 39%;
+    //         position: relative;
+    //     }
+    // }
 
     .foother-content {
         display: flex;
