--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
 @import 'sections/header.scss';
 @import 'sections/base.scss';
 @import 'sections/form.scss';
-@import 'sections/about.scss';
+@import 'sections/сomponents.scss';
 @import 'sections/team.scss';
 @import 'sections/event.scss';
 @import 'sections/news.scss';
@@ -20,24 +20,16 @@
 
 body {
 
-  overflow-x: hidden;
+ 
   margin : 0;
 padding : 0;
 }
 
 @media screen and (max-width: 1024px ) {
   html, body {
-  overflow-x: hidden;
   margin : 0;
 padding : 0;
   }
 }
 
-// @media screen and (min-width: 768px ) {
-//   html {
-//     width: 768px;
-//     overflow-x: scroll;
-
-//   }
-// }
 
