--- a/src/styles/sections/news.scss
+++ b/src/styles/sections/news.scss
@@ -1,38 +1,16 @@
 .news {
-    margin-top: 250px;
-    margin-bottom: 250px;
-    padding-bottom: 200px;
+    padding-top: 150px;
+    // margin-top: 250px;
+    // margin-bottom: 250px;
+     padding-bottom: 200px;
     background-image: url(/images/news-bg-1.png),
                     url(/images/news-bg-2.png),
                     url(/images/news-bg-3.png);
-    background-position: left top 30%, left bottom, right bottom;
+    background-position: left top 45%, left bottom, right bottom;
+
     background-repeat: no-repeat;
-
-    .heading-news {
-
-        padding-bottom: 100px;
-        h1 {
-            font-family: a_FuturaRoundDemi;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 48px;
-            line-height: 61px;
-            letter-spacing: 0.09em;
-            position: absolute;
-            z-index: 3;
-            margin-left: 39%;
-            margin-top: -1.5%;
-            color: #0A3737;
-        }
-        .bg-news {
-            img {
-            position: relative;
-            z-index: 1;
-            margin-left: 38%;
-            }
-        }
-    }
-
+    display: flex;
+    flex-direction: column;
 }
 
 .all-news {
@@ -53,10 +31,12 @@
 
 }
 .networks {
-    margin-top: 150px;
+    padding-top: 90px;
+    padding-left: 5%;
+    padding-right: 5%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     .instagram-1, .instagram-2, .instagram-3 {
 
         flex-direction: column;
@@ -70,7 +50,6 @@
         box-shadow: 2px 4px 10px rgba(11, 60, 60, 0.3);
         border-radius: 30px;
         transform: rotate(0.44deg);
-        margin-right: 40px;
         .foto {
             img {
               border-radius: 30px 30px 0px 0px;
@@ -81,8 +60,9 @@
             display:flex;
             flex-direction: row;
             justify-content: space-between;
-            margin-left: 30px;
-            margin-right: 30px;
+            padding: 20px 30px 0px 30px;
+            // margin-left: 30px;
+            // margin-right: 30px;
            
             .text-content {
                 margin-top: -10px;
@@ -113,14 +93,13 @@
             display: flex;
             align-items:center;
             justify-content: center;
+            padding-bottom: 40px;
             button {
-                margin: 20px 0px 40px 0px;
+                
                 border:0;
                 border-radius: 50px;
                 outline:none;
-                font-size:19 px;
-                text-transform:uppercase;
-                letter-spacing:.1em;
+                font-size: 19px;
                 font-family: Ubuntu;
                 font-style: normal;
                 line-height: 22px;
@@ -146,6 +125,7 @@
     top: 0;
     left: 0;
 }
+
 
 @media screen and (max-width: 1024px )  {
     .news {
@@ -181,7 +161,10 @@
         margin-top: 150px;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
+        padding-top: 0px;
+        padding-left: 50px;
+        padding-right: 50px;
 
         .instagram-3 {
             display: none;
