--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,8 @@
 @import "settings";
 
 .wr-doing{
+  padding-top: 50px;
+  margin-bottom: 150px;
   .container{
     @media all and (max-width: 414px) {
       padding: 0 70px;
@@ -122,59 +124,16 @@
   }
 
 }
-.heading-doing {
-  margin-bottom: 100px;
-  h1 {
-    font-family: a_FuturaRoundDemi;
+.doing-description {
+  padding: 30px;
+  p{
+    font-family: Ubuntu;
     font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 61px;
-    letter-spacing: 0.05em;
-    position: absolute;
-    z-index: 3;
-    margin-left: 36%;
-    margin-top: -1.5%;
-    color: #0A3737;
-  }
-  .bg-heading {
-      img {
-      position: relative;
-      z-index: 1;
-      margin-left: 35%;
-      }
-  }
-  .doing-description {
-    p {
-      font-family: Ubuntu;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 32px;
-      line-height: 130%;
-      text-align: center;
-      color: #333333;
-    }
-  }
-  @media screen and (max-width: 768px ) {
-    h1 {
-      font-size: 40px;
-      margin-left: 30%;
-      margin-top: -1.5%;
-      @media screen and (max-width: 600px ) {
-        font-size: 30px;
-      }
-    }
-    .bg-heading {
-        img {
-        position: relative;
-        z-index: 1;
-        margin-left: 29%;
-        }
-    }
-    .doing-description {
-      p {
-        font-size: 27px;
-      }
-    }
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 130%;
+    text-align: center;
+
+    color: #333333;
   }
 }
