--- a/src/styles/sections/base.scss
+++ b/src/styles/sections/base.scss
@@ -1,4 +1,5 @@
 .wrapper-base {
+    height: 115vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +7,7 @@
     background-image: url("/images/bg-left.png"),
                     url("/images/bg-right.png") ;
     background-repeat: no-repeat;
-    background-position: left 0% bottom 5%,  right 0% bottom 5%;
+    background-position: left 0% bottom 0%,  right 0% bottom 0%;
     background-size: 65% 60%, 35% 60%;
     margin-bottom: 50px;
 
@@ -89,7 +90,7 @@
     flex-direction: row;
     position: border-bottom;
 
-    margin-top: 77%;
+    margin-top: 55%;
     .social-icon {
 
        margin-right: 10px;
@@ -142,6 +143,7 @@
    
     
         .wrapper-base {
+            height: 100%;
             background-size: 100% 70%;
             background-image:url("/images/bg-mobile.png"),
             none ;
@@ -182,50 +184,55 @@
     
 }
 @media screen and (max-width: 768px ) {
-    .base {
-        flex-wrap: wrap;
-      
-    
-        .base-caption {
-           margin: 50px;
-    
-           .caption {
-            font-family: a_FuturaRound;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 48px;
-            line-height: 120%;
-            letter-spacing: 0.05em;
-            color: #EC5F72;
-            h1 {
-                color: #EC5F72;
-                font-size: 48px;}
-    
-           }
-        }
-        .description {
-    
-            p {
+    .wrapper-base{
+        height: auto;
+        .base {
+            flex-wrap: wrap;
+        
+        
+            .base-caption {
+                padding-top: 0px;
+                padding-bottom: 30px;
+        
                 
-                font-size: 26px;
-               
+            .caption {
+                font-family: a_FuturaRound;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 48px;
+                line-height: 120%;
+                letter-spacing: 0.05em;
+                color: #EC5F72;
+                h1 {
+                    color: #EC5F72;
+                    font-size: 48px;}
+        
             }
+            }
+            .description {
+        
+                p {
+                    
+                    font-size: 26px;
+                
+                }
+            }
+            .base-button {
+                margin-top: 30px;
+                button {
+                padding: 0px 30px;
+                margin-left: -10%;
+                font-weight: 800;
+                width:40%
+                }
+            }
+            .social-icons {
+                display: none;
+            }
+        
+        
+        
         }
-        .base-button {
-            margin-top: 60px;
-            button {
-            padding: 0px 30px;
-            margin-left: 30%;
-            font-weight: 800;
-            width:40%
-          }
-        }
-        .social-icons {
-            display: none;
-        }
-    
-    
-    
     }
-    
 }
+
