--- a/src/styles/sections/event.scss
+++ b/src/styles/sections/event.scss
@@ -1,10 +1,12 @@
-.event {
+.wrapper-event {
+  height: 120vh;
   background-image: url(/images/event.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-  background-size: 100%;
+  background-size: 100% 95%;
   padding-top: 100px;
+  padding-bottom: 100px;
   @media screen and (max-width: 1024px ) {
     padding-top: 0%;
   }
@@ -158,7 +160,7 @@
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
-    padding-top: 100px;
+    
     padding-bottom: 100px;
 
     a {
@@ -181,4 +183,16 @@
 
   padding-bottom: 150px;
   padding-top:100px;
+}
+@media screen and (max-width: 1024px ) {
+  .wrapper-event {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 768px ) {
+  .wrapper-event {
+    height: 100%;
+    padding-bottom: 0px;
+  }
 }
