--- a/src/styles/sections/history.scss
+++ b/src/styles/sections/history.scss
@@ -3,9 +3,9 @@
                     url(/images/bg-history-2.png);
     background-repeat: no-repeat;
     background-position: left bottom, right top;
-    padding-top: 200px;
-    padding-bottom: 300px;
-    margin-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 250px;
+   
 
  
 
@@ -19,7 +19,7 @@
          padding-left: 13%;
          padding-right: 13%;
      
-        margin-top: 100px;
+         margin-top: 70px;
 
         .history-content-1 {
             
@@ -56,7 +56,7 @@
             }
         }
         .description-history {
-
+            margin-top: -10px;
             h5 {
                 font-family: Ubuntu;
                 font-style: italic;
@@ -110,7 +110,7 @@
 }
 
 .founders {
-   padding-bottom: 200px;
+   padding-bottom: 100px;
    display:flex;
    flex-direction: column;
    justify-content: center;
@@ -119,11 +119,11 @@
                    url(/images/history-bg-2.png),
                    url(/images/history-bg-1.png);
   background-repeat: no-repeat;
-  background-position: left top,
+  background-position: left top -3%,
                     right top 55%,
-                    left top 110%;
+                    left top 113%;
 
-  background-size: 100% 45%;
+  background-size: 100% 47%;
 
     
     .wr-founders {
