--- a/src/styles/sections/foother.scss
+++ b/src/styles/sections/foother.scss
@@ -148,3 +148,61 @@
     }
     
 }
+
+@media screen and (max-width: 650px ) {
+    .wrapper-foother {
+        padding-top: 100px;
+        background-image: url(/images/f-bg-min.png);
+        background-size: 150% 52%;
+        background-repeat: no-repeat;
+        background-position-y: 100%;
+        
+        .foother-content {
+            margin-left: 0px;
+            margin-right: 0px;
+            padding: 50px 30px 30px 30px;
+    
+            h4{
+                font-family: a_FuturaRoundDemi;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 16px;
+                line-height: 25px;
+                letter-spacing: 0.03em;
+                color: #E55266;
+            }
+            .unit-1, .unit-2 {
+                font-size: 14px;
+            }
+            // .unit-1 {
+            //     display: none;
+            // }
+        }
+        .contacts {
+    
+            font-size: 15px;
+            line-height: 23px;
+            padding-left: 100px;
+            padding-right: 100px;
+            padding-top: 50px;
+            padding-bottom: 70px;
+    
+    
+    
+    
+            .soc-icons {
+                margin-top: 40px;
+                display: flex;
+                flex-direction: row;
+                align-items:center;
+                justify-content: center;
+    
+    
+                .icon {
+                    padding-left: 30px;
+                }
+            }
+        }
+    }
+    
+}
