--- a/src/styles/sections/team.scss
+++ b/src/styles/sections/team.scss
@@ -1,5 +1,5 @@
 .wrapper-team {
-    height: 120vh;
+    // height: 120vh;
     margin-top: 70px;
     background-image: url(/images/bg-team.png);
     background-size: contain;
