--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -115,10 +115,10 @@
       font-size: 24px;
       width: 280px;
       @media all and (max-width: 550px) {
-        font-size: 20px;
+        font-size: 18px;
       }
       @media all and (max-width: 340px) {
-        font-size: 17px;
+        font-size: 16px;
       }
     }
   }
@@ -135,5 +135,11 @@
     text-align: center;
 
     color: #333333;
+  }
+  @media all and (max-width: 550px) {
+    padding: 10px;
+    p {
+      font-size: 25px;
+    }
   }
 }
