feat: accordion bootstrap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap&subset=cyrillic,cyrillic-ext');
 @import url("http://allfont.ru/allfont.css?fonts=a_futurarounddemi");
 @import url("http://allfont.ru/allfont.css?fonts=comic-sans-ms");
+@import "~bootstrap/scss/bootstrap";
 @import 'sections/header.scss';
 @import 'sections/base.scss';
 @import 'sections/form.scss';
